Made more progress on making the website responsive for tablet sized screens, finished testimonials, and started on benefits containe, Also made small changes to further improve readability and finer details that got overlooked (backwards svg in testimonial 3, font size too small for most headers, mobile responsiveness breaking when on tablet sized screen)

--- a/index.html
+++ b/index.html
@@ -132,297 +132,305 @@
       <object id="down-arrow" type="image/svg+xml" data="/images/arrow.svg" width="70" height="70">
       </object>
     </div>
-    <!-- End of Card Within A Card Layout-->
+  </section>
+  <!-- End of 5 Card Layout-->
 
-    <!-- Testimonials Layout -->
-    <section class="card" class="container" id="testimonials-container">
-      <div class="card" id="header-text-testimonials">
-        <h3>
-          TESTIMONIALS
-        </h3>
-        <h1>
-          We are committed<br>
-          expert partners
-        </h1>
+  <!-- Testimonials Layout -->
+  <section class="card" class="container" id="testimonials-container">
+    <div class="card" id="header-text-testimonials">
+      <h3>
+        TESTIMONIALS
+      </h3>
+      <h1>
+        We are committed<br>
+        expert partners
+      </h1>
+      <p>
+        We place huge value on strong<br>
+        relationships and have seen the<br>
+        benefit they<br id="tablet-word-wrap"> bring to out business.<br>
+        Customer feedback is vital in<br>
+        helping us to get it right.
+      </p>
+    </div>
+    <div class="card" id="testimonial-1">
+      <img src="/images/testimonial1.png" alt="white dude smiling">
+      <div class="quote-text">
         <p>
-          We place huge value on strong<br>
-          relationships and have seen the<br>
-          benefit they bring to out business.<br>
-          Customer feedback is vital in<br>
-          helping us to get it right.
-        </p>
-      </div>
-      <div class="card" id="testimonial-1">
-        <img src="/images/testimonial1.png" alt="white dude smiling">
-        <div class="quote-text">
           <svg class="quote-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
             <image href="images/left_quote.svg" width="24" height="24" />
           </svg>
-          Vitae suscpit tellus mauris a<br>
-          diam maecenas sed enim ut.<br>
-          Mauris augue neque gravida in<br>
-          fermentum. Praesent semper<br>
-          feugiat nibh sed pulvinar<br>
+          Vitae suscpit tellus mauris a<br class="mobile-word-wrap-test">
+          diam maecenas sed enim ut.<br class="mobile-word-wrap-test">
+          Mauris augue neque gravida in<br class="mobile-word-wrap-test">
+          fermentum. Praesent semper<br class="mobile-word-wrap-test">
+          feugiat nibh sed pulvinar<br class="mobile-word-wrap-test">
           proin.
           <svg class="quote-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
             <image href="images/right_quote.svg" width="24" height="24" />
           </svg>
-        </div>
-        <h2>
-          NAT REYNOLDS
-        </h2>
+        </p>
       </div>
-      <div class="card" id="testimonial-2">
-        <img src="/images/Untitled design(1).png" alt="white girl smiling">
-        <div class="quote-text">
+      <h2>
+        NAT REYNOLDS
+      </h2>
+    </div>
+    <div class="card" id="testimonial-2">
+      <img src="/images/Untitled design(1).png" alt="white girl smiling">
+      <div class="quote-text">
+        <p>
           <svg class="quote-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
             <image href="images/left_quote.svg" width="24" height="24" />
           </svg>
-          Pharetra vel turpis nunc eget<br>
-          lorem. Quisque id diam vel<br>
-          quam elementum pulvinar<br>
-          etiam. Urna porttitor rhoncus<br>
-          dolor purus non enim praesent<br>
+          Pharetra vel turpis nunc eget<br class="mobile-word-wrap-test">
+          lorem. Quisque id diam vel<br class="mobile-word-wrap-test">
+          quam elementum pulvinar<br class="mobile-word-wrap-test">
+          etiam. Urna porttitor rhoncus<br class="mobile-word-wrap-test">
+          dolor purus non enim praesent<br class="mobile-word-wrap-test">
           elementum.
           <svg class="quote-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
             <image href="images/right_quote.svg" width="24" height="24" />
           </svg>
-        </div>
-        <h2>
-          CELIA ALMEDA
-        </h2>
+        </p>
+
       </div>
-      <div class="card" id="testimonial-3">
-        <img src="/images/Untitled design.png" alt="white dude smiling">
-        <div class="quote-text">
-          <svg class="quote-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-            <image href="images/right_quote.svg" width="24" height="24" />
-          </svg>
-          Mauris augue neque gravida<br>
-          in fermentum. Praesent semper<br>
-          feugiat nibh sed pulvinar proin.<br>
-          Nibh nisl condimentum id<br>
-          venenatis a condimentum.
+      <h2>
+        CELIA ALMEDA
+      </h2>
+    </div>
+    <div class="card" id="testimonial-3">
+      <img src="/images/Untitled design.png" alt="white dude smiling">
+      <div class="quote-text">
+        <p>
           <svg class="quote-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
             <image href="images/left_quote.svg" width="24" height="24" />
           </svg>
-        </div>
-        <h2>
-          BOB ROBERTS
-        </h2>
-      </div>
-    </section>
-    <!-- End Of Testimonials Layout -->
-
-    <!-- 6 Cards Within A Card Layout -->
-    <section class="card" class="container" id="benefits-container">
-      <h1>
-        Benefits of working with us
-      </h1>
-      <article class="card" id="high-quality">
-        <h2>
-          01
-        </h2>
-        <h4>
-          High Quality
-        </h4>
-        <p>
-          Vitae suscpit tellus mauris a diam maecenas sed<br>
-          enim ut. Mauris augue neque gravida in<br>
-          fermentum. Praesent semper feugiat nibh sed<br>
-          pulvinar proin id venenatis.
-        </p>
-        <div class="more-container">
-          <h3 class="more-bubble">
-            more
-          </h3>
-        </div>
-      </article>
-      <article class="card" id="creative-team">
-        <h2>
-          02
-        </h2>
-        <h4>
-          Creative Team
-        </h4>
-        <p>
-          Vitae suscpit tellus mauris a diam maecenas sed<br>
-          enim ut. Mauris augue neque gravida in<br>
-          fermentum. Praesent semper feugiat nibh sed<br>
-          pulvinar proin id venenatis.
-        </p>
-        <div class="more-container">
-          <h3 class="more-bubble">
-            more
-          </h3>
-        </div>
-      </article>
-      <article class="card" id="amazing-results">
-        <h2>
-          03
-        </h2>
-        <h4>
-          Amazing Results
-        </h4>
-        <p>
-          Vitae suscpit tellus mauris a diam maecenas sed<br>
-          enim ut. Mauris augue neque gravida in<br>
-          fermentum. Praesent semper feugiat nibh sed<br>
-          pulvinar proin id venenatis.
-        </p>
-        <div class="more-container">
-          <h3 class="more-bubble">
-            more
-          </h3>
-        </div>
-      </article>
-      <article class="card" id="best-pricing">
-        <h2>
-          04
-        </h2>
-        <h4>
-          Best Pricing
-        </h4>
-        <p>
-          Vitae suscpit tellus mauris a diam maecenas sed<br>
-          enim ut. Mauris augue neque gravida in<br>
-          fermentum. Praesent semper feugiat nibh sed<br>
-          pulvinar proin id venenatis.
-        </p>
-        <div class="more-container">
-          <h3 class="more-bubble">
-            more
-          </h3>
-        </div>
-      </article>
-      <article class="card" id="innovations">
-        <h2>
-          05
-        </h2>
-        <h4>
-          Innovations
-        </h4>
-        <p>
-          Vitae suscpit tellus mauris a diam maecenas sed<br>
-          enim ut. Mauris augue neque gravida in<br>
-          fermentum. Praesent semper feugiat nibh sed<br>
-          pulvinar proin id venenatis.
-        </p>
-        <div class="more-container">
-          <h3 class="more-bubble">
-            more
-          </h3>
-        </div>
-      </article>
-      <article class="card" id="twofoursev-support">
-        <h2>
-          06
-        </h2>
-        <h4>
-          24/7 Support
-        </h4>
-        <p>
-          Vitae suscpit tellus mauris a diam maecenas sed<br>
-          enim ut. Mauris augue neque gravida in<br>
-          fermentum. Praesent semper feugiat nibh sed<br>
-          pulvinar proin id venenatis.
-        </p>
-        <div class="more-container">
-          <h3 class="more-bubble">
-            more
-          </h3>
-        </div>
-      </article>
-    </section>
-    <!-- End Of 6 Cards Within A Card Layout -->
-
-    <!-- About Us Layout -->
-    <section class="card" class="container" id="about-us">
-      <h1>
-        About Us
-      </h1>
-      <div id="about-us-text">
-        <p>
-          Sample text. Click to Egestas egestas fringilla<br>
-          phasellus faucibus scelerisque eleifend donec<br>
-          pretium vulputate. Pharetra magna ac placerat<br> vestibulum. Quam lacus suspendisse faucibus<br>
-          interdum posuere lorem. Egestas tellus rutrum<br>
-          tellus pellentesque eu tincidunt. Neque vitae<br>
-          tempus quam pellentesque nec. Vel elit<br>
-          scelerisque mauris pellentesque pulvinar<br>
-          pellentesque habitant morbi. Interdum velit<br>
-          euismod in pellentesque massa placerat duis.
-        </p>
-        <p>
-          Quis viverra nibh cras pulvinar mattis. Ornare<br>
-          arcu dui vivamus arcu felis bibendum ut tristique.<br> Pellentesque eu tincidunt tortor aliquam nulla<br>
-          facilisi cras fermentum odio. Dignissim diam quis<br>
-          enim lobortis scelerisque. Tellus molestie nunc<br>
-          non blandit massa enim. the text box. Click again<br>
-          or double click to start editing the text.
+          Mauris augue neque gravida<br class="mobile-word-wrap-test">
+          in fermentum. Praesent semper<br class="mobile-word-wrap-test">
+          feugiat nibh sed pulvinar proin.<br class="mobile-word-wrap-test">
+          Nibh nisl condimentum id<br class="mobile-word-wrap-test">
+          venenatis a condimentum.
+          <svg class="quote-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+            <image href="images/right_quote.svg" width="24" height="24" />
+          </svg>
         </p>
       </div>
-      <img src="/images/boss-circle-quote.png" alt="white dude in a suit">
       <h2>
-        I help companies tincidunt<br>
-        tortor aliquam nulla facilisi<br>
-        cras fermentum odio.
+        BOB ROBERTS
       </h2>
-      <div class="container" id="linkedin">
-        <svg id="u-svg-content" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-          version="1.1" viewBox="0 0 512 512" style="width: 1em; height: 1em;">
-          <path fill="#FFFFFF"
-            d="m256 0c-141.363281 0-256 114.636719-256 256s114.636719 256 256 256 256-114.636719 256-256-114.636719-256-256-256zm-74.390625 387h-62.347656v-187.574219h62.347656zm-31.171875-213.1875h-.40625c-20.921875 0-34.453125-14.402344-34.453125-32.402344 0-18.40625 13.945313-32.410156 35.273437-32.410156 21.328126 0 34.453126 14.003906 34.859376 32.410156 0 18-13.53125 32.402344-35.273438 32.402344zm255.984375 213.1875h-62.339844v-100.347656c0-25.21875-9.027343-42.417969-31.585937-42.417969-17.222656 0-27.480469 11.601563-31.988282 22.800781-1.648437 4.007813-2.050781 9.609375-2.050781 15.214844v104.75h-62.34375s.816407-169.976562 0-187.574219h62.34375v26.558594c8.285157-12.78125 23.109375-30.960937 56.1875-30.960937 41.019531 0 71.777344 26.808593 71.777344 84.421874zm0 0">
-          </path>
-        </svg>
-        <h4>
-          Find me on LinkedIn
-        </h4>
-      </div>
-    </section>
-    <!-- End Of About Us Layout -->
+    </div>
+  </section>
+  <!-- End Of Testimonials Layout -->
 
-    <!-- Get Started Layout -->
-    <section class="container" id="get-started">
+  <!-- 6 Cards Within A Card Layout -->
+  <section class="card" class="container" id="benefits-container">
+    <h1>
+      Benefits of working with us
+    </h1>
+    <article class="card" id="high-quality">
+      <h2>
+        01
+      </h2>
       <h4>
-        GET STARTED
+        High Quality
       </h4>
-      <h2>
-        Simple, Transparent<br>
-        Pricing
-      </h2>
-      <h1>
-        It's Free!
-      </h1>
       <p>
-        We're still in beta and we will be for awhile.<br>
-        As we add more functionality, we'll look into<br>
-        other plans with more controls.
+        Vitae suscpit tellus mauris a diam maecenas sed<br>
+        enim ut. Mauris augue neque gravida in<br>
+        fermentum. Praesent semper feugiat nibh sed<br>
+        pulvinar proin id venenatis.
       </p>
-      <div class="card" id="get-started-button">
-        <h3>
-          Get Started
+      <div class="more-container">
+        <h3 class="more-bubble">
+          more
         </h3>
       </div>
-      <div id="misc-row">
-        <p>
-          Copyright 2023&copy;
-        </p>
-        <div id="big-dot">
-          <p>
-            &#x2E;
-          </p>
-        </div>
-        <a href="/pages/">Terms of Service</a>
-        <div id="big-dot">
-          <p>
-            &#x2E;
-          </p>
-        </div>
-        <a href="/pages/">Privacy Policy</a>
+    </article>
+    <article class="card" id="creative-team">
+      <h2>
+        02
+      </h2>
+      <h4>
+        Creative Team
+      </h4>
+      <p>
+        Vitae suscpit tellus mauris a diam maecenas sed<br>
+        enim ut. Mauris augue neque gravida in<br>
+        fermentum. Praesent semper feugiat nibh sed<br>
+        pulvinar proin id venenatis.
+      </p>
+      <div class="more-container">
+        <h3 class="more-bubble">
+          more
+        </h3>
       </div>
-    </section>
-    <!-- End Of Get Started Layout -->
+    </article>
+    <article class="card" id="amazing-results">
+      <h2>
+        03
+      </h2>
+      <h4>
+        Amazing Results
+      </h4>
+      <p>
+        Vitae suscpit tellus mauris a diam maecenas sed<br>
+        enim ut. Mauris augue neque gravida in<br>
+        fermentum. Praesent semper feugiat nibh sed<br>
+        pulvinar proin id venenatis.
+      </p>
+      <div class="more-container">
+        <h3 class="more-bubble">
+          more
+        </h3>
+      </div>
+    </article>
+    <article class="card" id="best-pricing">
+      <h2>
+        04
+      </h2>
+      <h4>
+        Best Pricing
+      </h4>
+      <p>
+        Vitae suscpit tellus mauris a diam maecenas sed<br>
+        enim ut. Mauris augue neque gravida in<br>
+        fermentum. Praesent semper feugiat nibh sed<br>
+        pulvinar proin id venenatis.
+      </p>
+      <div class="more-container">
+        <h3 class="more-bubble">
+          more
+        </h3>
+      </div>
+    </article>
+    <article class="card" id="innovations">
+      <h2>
+        05
+      </h2>
+      <h4>
+        Innovations
+      </h4>
+      <p>
+        Vitae suscpit tellus mauris a diam maecenas sed<br>
+        enim ut. Mauris augue neque gravida in<br>
+        fermentum. Praesent semper feugiat nibh sed<br>
+        pulvinar proin id venenatis.
+      </p>
+      <div class="more-container">
+        <h3 class="more-bubble">
+          more
+        </h3>
+      </div>
+    </article>
+    <article class="card" id="twofoursev-support">
+      <h2>
+        06
+      </h2>
+      <h4>
+        24/7 Support
+      </h4>
+      <p>
+        Vitae suscpit tellus mauris a diam maecenas sed<br>
+        enim ut. Mauris augue neque gravida in<br>
+        fermentum. Praesent semper feugiat nibh sed<br>
+        pulvinar proin id venenatis.
+      </p>
+      <div class="more-container">
+        <h3 class="more-bubble">
+          more
+        </h3>
+      </div>
+    </article>
+  </section>
+  <!-- End Of 6 Cards Within A Card Layout -->
+
+  <!-- About Us Layout -->
+  <section class="card" class="container" id="about-us">
+    <h1>
+      About Us
+    </h1>
+    <div id="about-us-text">
+      <p>
+        Sample text. Click to Egestas egestas fringilla<br>
+        phasellus faucibus scelerisque eleifend donec<br>
+        pretium vulputate. Pharetra magna ac placerat<br> vestibulum. Quam lacus suspendisse faucibus<br>
+        interdum posuere lorem. Egestas tellus rutrum<br>
+        tellus pellentesque eu tincidunt. Neque vitae<br>
+        tempus quam pellentesque nec. Vel elit<br>
+        scelerisque mauris pellentesque pulvinar<br>
+        pellentesque habitant morbi. Interdum velit<br>
+        euismod in pellentesque massa placerat duis.
+      </p>
+      <p>
+        Quis viverra nibh cras pulvinar mattis. Ornare<br>
+        arcu dui vivamus arcu felis bibendum ut tristique.<br> Pellentesque eu tincidunt tortor aliquam nulla<br>
+        facilisi cras fermentum odio. Dignissim diam quis<br>
+        enim lobortis scelerisque. Tellus molestie nunc<br>
+        non blandit massa enim. the text box. Click again<br>
+        or double click to start editing the text.
+      </p>
+    </div>
+    <img src="/images/boss-circle-quote.png" alt="white dude in a suit">
+    <h2>
+      I help companies tincidunt<br>
+      tortor aliquam nulla facilisi<br>
+      cras fermentum odio.
+    </h2>
+    <div class="container" id="linkedin">
+      <svg id="u-svg-content" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+        version="1.1" viewBox="0 0 512 512" style="width: 1em; height: 1em;">
+        <path fill="#FFFFFF"
+          d="m256 0c-141.363281 0-256 114.636719-256 256s114.636719 256 256 256 256-114.636719 256-256-114.636719-256-256-256zm-74.390625 387h-62.347656v-187.574219h62.347656zm-31.171875-213.1875h-.40625c-20.921875 0-34.453125-14.402344-34.453125-32.402344 0-18.40625 13.945313-32.410156 35.273437-32.410156 21.328126 0 34.453126 14.003906 34.859376 32.410156 0 18-13.53125 32.402344-35.273438 32.402344zm255.984375 213.1875h-62.339844v-100.347656c0-25.21875-9.027343-42.417969-31.585937-42.417969-17.222656 0-27.480469 11.601563-31.988282 22.800781-1.648437 4.007813-2.050781 9.609375-2.050781 15.214844v104.75h-62.34375s.816407-169.976562 0-187.574219h62.34375v26.558594c8.285157-12.78125 23.109375-30.960937 56.1875-30.960937 41.019531 0 71.777344 26.808593 71.777344 84.421874zm0 0">
+        </path>
+      </svg>
+      <h4>
+        Find me on LinkedIn
+      </h4>
+    </div>
+  </section>
+  <!-- End Of About Us Layout -->
+
+  <!-- Get Started Layout -->
+  <section class="container" id="get-started">
+    <h4>
+      GET STARTED
+    </h4>
+    <h2>
+      Simple, Transparent<br>
+      Pricing
+    </h2>
+    <h1>
+      It's Free!
+    </h1>
+    <p>
+      We're still in beta and we will be for awhile.<br>
+      As we add more functionality, we'll look into<br>
+      other plans with more controls.
+    </p>
+    <div class="card" id="get-started-button">
+      <h3>
+        Get Started
+      </h3>
+    </div>
+    <div id="misc-row">
+      <p>
+        Copyright 2023&copy;
+      </p>
+      <div id="big-dot">
+        <p>
+          &#x2E;
+        </p>
+      </div>
+      <a href="/pages/">Terms of Service</a>
+      <div id="big-dot">
+        <p>
+          &#x2E;
+        </p>
+      </div>
+      <a href="/pages/">Privacy Policy</a>
+    </div>
+  </section>
+  <!-- End Of Get Started Layout -->
 
 </main>
 
