Finished Benefits Container for Tablet sized screens

--- a/index.html
+++ b/index.html
@@ -223,10 +223,12 @@
   <!-- End Of Testimonials Layout -->
 
   <!-- 6 Cards Within A Card Layout -->
-  <section class="card" class="container" id="benefits-container">
+  <div id="benefits-header">
     <h1>
       Benefits of working with us
     </h1>
+  </div>
+  <section class="card" class="container" id="benefits-container">
     <article class="card" id="high-quality">
       <h2>
         01
