--- a/index.html
+++ b/index.html
@@ -344,15 +344,16 @@
       </div>
     </article>
   </section>
+
   <!-- End Of 6 Cards Within A Card Layout -->
 
   <!-- About Us Layout -->
-  <section class="card" class="container" id="about-us">
-    <article id="about-us-1">
+  <section id="about-us">
+    <div id="about-us-text-1">
       <h1>
         About Us
       </h1>
-      <p id="about-us-text-1">
+      <p>
         Sample text. Click to Egestas egestas fringilla<br>
         phasellus faucibus scelerisque eleifend donec<br>
         pretium vulputate. Pharetra magna ac placerat<br> vestibulum. Quam lacus suspendisse faucibus<br>
@@ -363,7 +364,9 @@
         pellentesque habitant morbi. Interdum velit<br>
         euismod in pellentesque massa placerat duis.
       </p>
-      <p id="about-us-text-2">
+    </div>
+    <div id="about-us-text-2">
+      <p>
         Quis viverra nibh cras pulvinar mattis. Ornare<br>
         arcu dui vivamus arcu felis bibendum ut tristique.<br> Pellentesque eu tincidunt tortor aliquam nulla<br>
         facilisi cras fermentum odio. Dignissim diam quis<br>
@@ -371,24 +374,26 @@
         non blandit massa enim. the text box. Click again<br>
         or double click to start editing the text.
       </p>
-      <img src="/images/boss-circle-quote.png" alt="white dude in a suit">
+    </div>
+    <div>
+      <img id="whitedudeimg" src="/images/boss-circle-quote.png" width="50px" alt="white dude in a suit">
       <h2>
         I help companies tincidunt<br>
         tortor aliquam nulla facilisi<br>
         cras fermentum odio.
       </h2>
-      <div class="container" id="linkedin">
-        <svg id="u-svg-content" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-          version="1.1" viewBox="0 0 512 512" style="width: 1em; height: 1em;">
-          <path fill="#FFFFFF"
-            d="m256 0c-141.363281 0-256 114.636719-256 256s114.636719 256 256 256 256-114.636719 256-256-114.636719-256-256-256zm-74.390625 387h-62.347656v-187.574219h62.347656zm-31.171875-213.1875h-.40625c-20.921875 0-34.453125-14.402344-34.453125-32.402344 0-18.40625 13.945313-32.410156 35.273437-32.410156 21.328126 0 34.453126 14.003906 34.859376 32.410156 0 18-13.53125 32.402344-35.273438 32.402344zm255.984375 213.1875h-62.339844v-100.347656c0-25.21875-9.027343-42.417969-31.585937-42.417969-17.222656 0-27.480469 11.601563-31.988282 22.800781-1.648437 4.007813-2.050781 9.609375-2.050781 15.214844v104.75h-62.34375s.816407-169.976562 0-187.574219h62.34375v26.558594c8.285157-12.78125 23.109375-30.960937 56.1875-30.960937 41.019531 0 71.777344 26.808593 71.777344 84.421874zm0 0">
-          </path>
-        </svg>
-        <h4>
-          Find me on LinkedIn
-        </h4>
-      </div>
-    </article>
+    </div>
+    <div id="linkedin">
+      <svg id="u-svg-content" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+        version="1.1" viewBox="0 0 512 512" style="width: 1em; height: 1em;">
+        <path fill="#FFFFFF"
+          d="m256 0c-141.363281 0-256 114.636719-256 256s114.636719 256 256 256 256-114.636719 256-256-114.636719-256-256-256zm-74.390625 387h-62.347656v-187.574219h62.347656zm-31.171875-213.1875h-.40625c-20.921875 0-34.453125-14.402344-34.453125-32.402344 0-18.40625 13.945313-32.410156 35.273437-32.410156 21.328126 0 34.453126 14.003906 34.859376 32.410156 0 18-13.53125 32.402344-35.273438 32.402344zm255.984375 213.1875h-62.339844v-100.347656c0-25.21875-9.027343-42.417969-31.585937-42.417969-17.222656 0-27.480469 11.601563-31.988282 22.800781-1.648437 4.007813-2.050781 9.609375-2.050781 15.214844v104.75h-62.34375s.816407-169.976562 0-187.574219h62.34375v26.558594c8.285157-12.78125 23.109375-30.960937 56.1875-30.960937 41.019531 0 71.777344 26.808593 71.777344 84.421874zm0 0">
+        </path>
+      </svg>
+      <h4>
+        Find me on LinkedIn
+      </h4>
+    </div>
   </section>
   <!-- End Of About Us Layout -->
 
