made adjustments to the <br> tags that are meant for mobile and tablet, working on the get started section for mobile

--- a/index.html
+++ b/index.html
@@ -160,11 +160,11 @@
           <svg class="quote-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
             <image href="images/left_quote.svg" width="24" height="24" />
           </svg>
-          Vitae suscpit tellus mauris a<br class="mobile-word-wrap-test">
-          diam maecenas sed enim ut.<br class="mobile-word-wrap-test">
-          Mauris augue neque gravida in<br class="mobile-word-wrap-test">
-          fermentum. Praesent semper<br class="mobile-word-wrap-test">
-          feugiat nibh sed pulvinar<br class="mobile-word-wrap-test">
+          Vitae suscpit tellus mauris a<br class="mobile-word-wrap">
+          diam maecenas sed enim ut.<br class="mobile-word-wrap">
+          Mauris augue neque gravida in<br class="mobile-word-wrap">
+          fermentum. Praesent semper<br class="mobile-word-wrap">
+          feugiat nibh sed pulvinar<br class="mobile-word-wrap">
           proin.
           <svg class="quote-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
             <image href="images/right_quote.svg" width="24" height="24" />
@@ -182,11 +182,11 @@
           <svg class="quote-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
             <image href="images/left_quote.svg" width="24" height="24" />
           </svg>
-          Pharetra vel turpis nunc eget<br class="mobile-word-wrap-test">
-          lorem. Quisque id diam vel<br class="mobile-word-wrap-test">
-          quam elementum pulvinar<br class="mobile-word-wrap-test">
-          etiam. Urna porttitor rhoncus<br class="mobile-word-wrap-test">
-          dolor purus non enim praesent<br class="mobile-word-wrap-test">
+          Pharetra vel turpis nunc eget<br class="mobile-word-wrap">
+          lorem. Quisque id diam vel<br class="mobile-word-wrap">
+          quam elementum pulvinar<br class="mobile-word-wrap">
+          etiam. Urna porttitor rhoncus<br class="mobile-word-wrap">
+          dolor purus non enim praesent<br class="mobile-word-wrap">
           elementum.
           <svg class="quote-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
             <image href="images/right_quote.svg" width="24" height="24" />
@@ -205,10 +205,10 @@
           <svg class="quote-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
             <image href="images/left_quote.svg" width="24" height="24" />
           </svg>
-          Mauris augue neque gravida<br class="mobile-word-wrap-test">
-          in fermentum. Praesent semper<br class="mobile-word-wrap-test">
-          feugiat nibh sed pulvinar proin.<br class="mobile-word-wrap-test">
-          Nibh nisl condimentum id<br class="mobile-word-wrap-test">
+          Mauris augue neque gravida<br class="mobile-word-wrap">
+          in fermentum. Praesent semper<br class="mobile-word-wrap">
+          feugiat nibh sed pulvinar proin.<br class="mobile-word-wrap">
+          Nibh nisl condimentum id<br class="mobile-word-wrap">
           venenatis a condimentum.
           <svg class="quote-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
             <image href="images/right_quote.svg" width="24" height="24" />
@@ -403,15 +403,15 @@
       GET STARTED
     </h4>
     <h2>
-      Simple, Transparent<br>
+      Simple, Transparent<br class="mobile-word-wrap">
       Pricing
     </h2>
     <h1>
       It's Free!
     </h1>
     <p>
-      We're still in beta and we will be for awhile.<br>
-      As we add more functionality, we'll look into<br>
+      We're still in beta and we will be for awhile.<br class="mobile-word-wrap">
+      As we add more functionality, we'll look into<br class="mobile-word-wrap">
       other plans with more controls.
     </p>
     <div class="card" id="get-started-button">
@@ -444,7 +444,7 @@
 <footer>
   <section class="card" class="container" id="footer">
     <p>
-      Sample text. Click to select the text box. Click again<br>
+      Sample text. Click to select the text box. Click again<br class="mobile-word-wrap">
       or double click to start editing the text.
     </p>
   </section>
