--- a/index.html
+++ b/index.html
@@ -410,8 +410,8 @@
       It's Free!
     </h1>
     <p>
-      We're still in beta and we will be for awhile.<br>
-      As we add more functionality, we'll look into<br>
+      We're still in beta and we will be for awhile.
+      As we add more functionality, we'll look into
       other plans with more controls.
     </p>
     <div class="card" id="get-started-button">
